--- a/jobs/templates/sections/Home/job_whole_list.html
+++ b/jobs/templates/sections/Home/job_whole_list.html
@@ -103,7 +103,7 @@
                                             </div><!--end col-->
                                             <div class="col-lg-10">
                                                 <div class="mt-3 mt-lg-0">
-                                                    <h5 class="fs-17 mb-1"><a href="{% url 'job_detail' slug=job.slug %}" class="text-dark">{{job.title}}</a> <small class="text-muted fw-normal">{{job.rating|default_if_none:"&#11088; NA"}}</small></h5>
+                                                    <h5 class="fs-17 mb-1"><a href="{% url 'job_detail' slug=job.slug %}" class="text-dark">{{job.title}}</a> <small class="text-muted fw-normal">{{job.rating|default_if_none:"&#11088; "}}</small></h5>
                                                     <ul class="list-inline mb-0">
                                                         <li class="list-inline-item">
                                                             <p class="text-muted fs-14 mb-0">{{job.company}}</p>
@@ -112,11 +112,11 @@
                                                             <p class="text-muted fs-14 mb-0"><i class="mdi mdi-map-marker"></i> {{job.location}}</p>
                                                         </li>
                                                         <li class="list-inline-item">
-                                                            <p class="text-muted fs-14 mb-0"><i class="uil uil-wallet"></i>{{job.salary|default_if_none:"NA"}}</p>
+                                                            <p class="text-muted fs-14 mb-0"><i class="uil uil-wallet"></i>{{job.salary|default_if_none:""}}</p>
                                                         </li>
                                                     </ul>
                                                     <div class="mt-2">
-                                                        <span class="badge bg-soft-success mt-1">{{job.contract_type|default_if_none:"NA"}}</span>
+                                                        <span class="badge bg-soft-success mt-1">{{job.contract_type|default_if_none:""}}</span>
                                                     </div>
                                                 </div>
                                             </div><!--end col-->
@@ -207,7 +207,7 @@
                     </div>
 
                 </div>
-                {% comment %} {% include 'sections/job_whole_list_side_bar.html' %} {% endcomment %}
+                {% include 'sections/job_whole_list_side_bar.html' %}
                 
             </div>
         </div>
