--- a/jobs/templates/nav_bar.html
+++ b/jobs/templates/nav_bar.html
@@ -84,7 +84,7 @@
             <li class="list-inline-item dropdown">
                 <a href="javascript:void(0)" class="header-item" id="userdropdown" data-bs-toggle="dropdown"
                     aria-expanded="false">
-                        <img src="{% static 'assets/images/profile.jpg' %}" alt="mdo" width="35" height="35" class="rounded-circle me-1"> <span class="d-none d-md-inline-block fw-medium">Hi, kavay</span>
+                        <img src="{% static 'assets/images/profile.jpg' %}" alt="mdo" width="35" height="35" class="rounded-circle me-1"> <span class="d-none d-md-inline-block fw-medium">Hi, kavyabhargava</span>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userdropdown">
                     <li><a class="dropdown-item" href="manage-jobs.html">Manage Jobs</a></li>
