--- a/jobs/templates/sections/Home/footer.html
+++ b/jobs/templates/sections/Home/footer.html
@@ -73,7 +73,7 @@
                                 <p class="text-white-50 text-center mb-0">
                                     <script>document.write(new Date().getFullYear())</script> &copy; Jobcy - Job Listing Page
                                     Template by <a href="" target="_blank"
-                                        class="text-reset text-decoration-underline">Kavay</a>
+                                        class="text-reset text-decoration-underline">kavyabhargavay</a>
                                 </p>
                             </div><!--end col-->
                         </div><!--end row-->
