FIX: sign up button on navbar

--- a/jobs/templates/nav_bar.html
+++ b/jobs/templates/nav_bar.html
@@ -93,6 +93,10 @@
                     <li><a class="dropdown-item" href="sign-out.html">Logout</a></li>
                 </ul>
             </li>
+            <li class="list-inline-item p py-2 px-2 me-2 align-right">
+                <a href="#signupModal" class="text-dark fw-medium fs-13" data-bs-toggle="modal"><i class="uil uil-lock"></i>
+                    Sign Up</a>
+            </li>
         </ul><!--end header-menu-->
     </div>
     <!--end container-->
