--- a/jobs/templates/job/job_detail.html
+++ b/jobs/templates/job/job_detail.html
@@ -279,7 +279,7 @@
                                     </li>
                                 </ul>
                                 <div class="mt-3">
-                                    <a href="#applyNow" data-bs-toggle="modal" class="btn btn-primary btn-hover w-100 mt-2">Apply Now <i class="uil uil-arrow-right"></i></a>
+                                    <a href="{{job.url_link}}" data-bs-toggle="modal" class="btn btn-primary btn-hover w-100 mt-2">Apply Now <i class="uil uil-arrow-right"></i></a>
                                     {% comment %} <a href="bookmark-jobs.html" class="btn btn-soft-warning btn-hover w-100 mt-2"><i class="uil uil-bookmark"></i> Add Bookmark</a> {% endcomment %}
                                 </div>
                             </div><!--end card-body-->
@@ -333,9 +333,9 @@
                                         </div>
                                     </li>
                                 </ul>
-                                <div class="mt-4">
+                                {% comment %} <div class="mt-4">
                                     <a href="" class="btn btn-primary btn-hover w-100 rounded"><i class="mdi mdi-eye"></i> View Profile</a>
-                                </div>
+                                </div> {% endcomment %}
                             </div>
                         </div>
 
