--- a/jobs/templates/sections/Home/job_whole_list.html
+++ b/jobs/templates/sections/Home/job_whole_list.html
@@ -5,6 +5,7 @@
 {% block title %} Job Search {% endblock title %}
 
 {% block page-content %}
+{% include "nav_bar.html" %}
     <!-- Start home -->
     <section class="page-title-box">
         <div class="container">
@@ -48,7 +49,7 @@
                                     <div class="col-lg-5 col-md-6">
                                         <div class="filler-job-form">
                                             <i class="uil uil-briefcase-alt"></i>
-                                            {% render_field listing_filter.form.job_company class+="form-control filter-job-input-box" placeholder="Job, Company"%}
+                                            {% render_field listing_filter.form.job_company class+="form-control filter-job-input-box" placeholder="Search Job or Company or Skill"%}
                                         </div>
                                     </div><!--end col-->
                                     <div class="col-lg-3 col-md-6">
@@ -170,65 +171,7 @@
                         </div>
                         <!-- End Job-list -->
                         
-                        <!-- pagination start-->
-                        <div class="row">
-                            <div class="col-lg-12 mt-4 pt-2">
-                                <nav aria-label="Page navigation example">
-                                    <ul class="pagination job-pagination mb-0 justify-content-center">
-                                        {% if job_per_page.has_previous %}
-                                            <li class="page-item">
-                                                {% if '?job_company' in request.get_full_path %}
-                                                    <a class="page-link" href="{{request.get_full_path}}&page={{job_per_page.previous_page_number}}">
-                                                        <i class="mdi mdi-chevron-double-left fs-15"></i>
-                                                    </a> 
-                                                {% else %}
-                                                    <a class="page-link" href="?page={{job_per_page.previous_page_number}}">
-                                                        <i class="mdi mdi-chevron-double-left fs-15"></i>
-                                                    </a> 
-                                                {% endif %}
-                                            </li>
-                                        {% else %}
-                                            <li class="page-item disabled">
-                                                <a class="page-link" href="javascript:void(0)" tabindex="-1">
-                                                    <i class="mdi mdi-chevron-double-left fs-15"></i>
-                                                </a>
-                                            </li>
-                                        {% endif %}
-                                        
-                                        <li class="page-item active">
-                                            <a class="page-link" href="javascript:void(0)">
-                                                {{job_per_page.number}}
-                                            </a>
-                                        </li>
-                                        
-                                        {% comment %} <li class="page-item"><a class="page-link" href="?page=2">2</a></li>
-                                        <li class="page-item"><a class="page-link" href="?page=3">3</a></li>
-                                        <li class="page-item"><a class="page-link" href="?page=4">4</a></li> {% endcomment %}
-
-                                        {% if job_per_page.has_next %}
-                                            <li class="page-item">
-                                                {% if '?job_company' in request.get_full_path %}
-                                                    <a class="page-link" href="{{request.get_full_path}}&page={{job_per_page.next_page_number}}">
-                                                        <i class="mdi mdi-chevron-double-right fs-15"></i>
-                                                    </a> 
-                                                {% else %}
-                                                    <a class="page-link" href="?page={{job_per_page.next_page_number}}">
-                                                        <i class="mdi mdi-chevron-double-right fs-15"></i>
-                                                    </a> 
-                                                {% endif %}
-                                            </li>
-                                        {% else %}
-                                            <li class="page-item disabled">
-                                                <a class="page-link" href="job_per_page.next_page_number">
-                                                    <i class="mdi mdi-chevron-double-right fs-15"></i>
-                                                </a>
-                                            </li>
-                                        {% endif %}
-                                    </ul>
-                                </nav>
-                                <h6>Page {{job_per_page.number}} of {{job_per_page.paginator.num_pages}}</h6>
-                            </div><!--end col-->
-                        </div><!-- end row -->
+                        {% include 'sections/Home/pagination.html' %}
                     </div>
 
                 </div>
