--- a/jobs/templates/contact.html
+++ b/jobs/templates/contact.html
@@ -7,6 +7,7 @@
   {% include "page_loader.html" %}
 {% endblock pageloader %} {% endcomment %}
 {% block page-content %}
+    {% include "nav_bar.html" %}
         <!-- Start home -->
         <section class="page-title-box">
             <div class="container">
