--- a/jobs/templates/sections/Home/pagination.html
+++ b/jobs/templates/sections/Home/pagination.html
@@ -1,10 +1,18 @@
+{% load filter_tags %}
 <!-- pagination start-->
 <div class="row">
     <div class="col-lg-12 mt-4 pt-2">
         <nav aria-label="Page navigation example">
             <ul class="pagination job-pagination mb-0 justify-content-center">
                 {% for page_number in job_per_page.paginator.page_range %}
-                        <li class="page-item {% if page_number == job_per_page.number %}active{% endif %}"><a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a></li>
+                        <li class="page-item {% if page_number == job_per_page.number %}active{% endif %}">
+                            <a class="page-link" href="
+                            {% if 'page=' in request.get_full_path %}
+                                ?{% url_replace request 'page' page_number %}
+                            {% else %}
+                                {{request.get_full_path}}&page={{ page_number }}
+                            {% endif %}">{{ page_number }}</a>
+                        </li>
                 {% endfor %}
                 
 
