added role filter functionality to template file

--- a/jobs/templates/sections/Home/job_whole_list.html
+++ b/jobs/templates/sections/Home/job_whole_list.html
@@ -91,6 +91,12 @@
                                             <i class="uil uil-calendar-alt"></i> 
                                         </div>
                                     </div><!--end col-->
+                                    <div class="col-lg-3 col-md-6">
+                                        <div class="filler-job-form">
+                                            {% render_field listing_filter.form.roles class+="form-control filter-job-input-box" %}
+                                            <i class="uil uil-bars"></i> 
+                                        </div>
+                                    </div><!--end col-->
                                 </div>
                                 <div class="col-lg-11 col-md-6 p-2">
                                     <button class="btn btn-primary w-100">
