--- a/jobs/templates/nav_bar.html
+++ b/jobs/templates/nav_bar.html
@@ -43,17 +43,7 @@
 <!-- END TOP-BAR --> {% endcomment %}
 <!--Navbar Start-->
 <nav class="navbar navbar-expand-lg fixed-top sticky-top" id="navbar">
-    <div class="container-fluid custom-container">
-        <a class="navbar-brand text-dark fw-bold me-auto" href="{% url 'home' %}">
-            <img src="{% static 'assets/images/logo-dark.png' %}" height="22" alt="" class="logo-dark" />
-            <img src="{% static 'assets/images/logo-light.png' %}" height="22" alt="" class="logo-light" />
-        </a>
-        <div>
-            <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-label="Toggle navigation">
-                <i class="mdi mdi-menu"></i>
-            </button>
-        </div>
+    <div class="container-fluid">
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mx-auto navbar-center">
                 <li class="nav-item dropdown dropdown-hover">
