--- a/jobs/templates/sections/Home/job_whole_list.html
+++ b/jobs/templates/sections/Home/job_whole_list.html
@@ -7,7 +7,7 @@
 {% block page-content %}
 {% include "nav_bar.html" %}
     <!-- Start home -->
-    <section class="page-title-box">
+    {% comment %} <section class="page-title-box">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-6">
@@ -30,7 +30,7 @@
         </div>
         <!--end container-->
     </section>
-    <!-- end home -->
+    <!-- end home --> {% endcomment %}
 
     {% include 'sections/Home/shape.html' %}
 
