removed arrow drop down on home button on navbar

--- a/jobs/templates/nav_bar.html
+++ b/jobs/templates/nav_bar.html
@@ -48,7 +48,7 @@
             <ul class="navbar-nav mx-auto navbar-center">
                 <li class="nav-item dropdown dropdown-hover">
                     <a class="nav-link" href="{% url 'home' %}" id="homedrop" role="button">
-                        Home <div class="arrow-down"></div>
+                        Home 
                     </a>
                 </li>
                 {% comment %} <li class="nav-item dropdown dropdown-hover">
