👷 Dockerrized Web application

--- a/jobs/templates/auth/sign_in.html
+++ b/jobs/templates/auth/sign_in.html
@@ -25,7 +25,7 @@
                             <div class="auth-content card-body p-5 h-100 text-white">
                                 <div class="w-100">
                                     <div class="text-center mb-4">
-                                        <h5>Welcome Back !</h5>
+                                        <h5>Welcome Back bosses !</h5>
                                         <p class="text-white-70">Sign in to continue to Jobcy.</p>
                                     </div>
                                     <form action="" method="POST" class="auth-form">
